--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: firmware_uploader_python
 #+AUTHOR: Peter Polidoro
-#+EMAIL: peterpolidoro@gmail.com
+#+EMAIL: peter@polidoro.io
 
 * Package Information
   - Name :: firmware_uploader_python
@@ -8,7 +8,7 @@
   - License :: BSD
   - URL :: https://github.com/janelia-pypi/firmware_uploader_python
   - Author :: Peter Polidoro
-  - Email :: peterpolidoro@gmail.com
+  - Email :: peter@polidoro.io
 
   Uploads firmware to multiple embedded devices.
 
